Added ability to reorder, add, and delete feeds

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,11 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|smallestScreenSize|screenLayout|uiMode"
             android:alwaysRetainTaskState="true"
             android:theme="@style/swipeableweb"/>
+        <activity
+            android:name=".DragSort.ReorderSubreddits"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|smallestScreenSize|screenLayout|uiMode"
+            android:alwaysRetainTaskState="true"
+            android:theme="@style/swipeableweb"/>
     </application>
 
 </manifest>
