Switched to a Service system for refreshing Feeds, with 'unseen' and notification support (settings for this system to come), Will break Realm so reinstall if testing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,8 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|smallestScreenSize|screenLayout|uiMode"
             android:alwaysRetainTaskState="true"
             android:theme="@style/swipeableweb"/>
+        <receiver android:name=".CheckForPosts.CheckForPosts"></receiver>
+
     </application>
 
 </manifest>
